Fix for sort button alignment

--- a/frontend/src/pages/RegionalDashboard/components/CompliantFollowUpsTable.css
+++ b/frontend/src/pages/RegionalDashboard/components/CompliantFollowUpsTable.css
@@ -1,3 +1,11 @@
+/* Fix for sort button in initial column needing to be bottom-aligned */
+.ttahub-compliant-follow-ups-table .smarthub-horizontal-table-widget
+  .smarthub-horizontal-table-first-column
+  button::after {
+  top: initial;
+  bottom: -2px;
+}
+
 .ttahub-compliant-follow-ups-table
   .smarthub-horizontal-table-widget
   .smarthub-horizontal-table-first-column {
